fix: better readability in table

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,5 +12,5 @@ body {
 
 th,
 td {
-  @apply border border-black p-1;
+  @apply border border-black p-1 align-text-top;
 }
